force-app/main/default/objects/Medicine_Item__c/fields/Dose__c.field-meta.xml
<CustomField>
    <fullName>Dose__c</fullName>
    <inlineHelpText>In milligrams or milliliters</inlineHelpText>
    <label>Dose</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>