force-app/main/default/objects/Medicine_Item__c/fields/Dose_Cost__c.field-meta.xml
<CustomField>
    <fullName>Dose_Cost__c</fullName>
    <label>Dose Cost</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>