force-app/main/default/objects/Medicine_Item__c/fields/ontraindication__c.field-meta.xml
<CustomField>
    <fullName>ontraindication__c</fullName>
    <label>Сontraindication</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>