force-app/main/default/objects/Medicine_Item__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Medicine Items</relationshipLabel>
    <relationshipName>Medicine_Items</relationshipName>
    <type>Lookup</type>
</CustomField>